feat: アカウント作成にメールアドレス必須にするオプション

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -790,6 +790,11 @@ unresolved: "未解決"
 itsOn: "オンになっています"
 itsOff: "オフになっています"
 
+_signup:
+  almostThere: "ほとんど完了です"
+  emailAddressInfo: "あなたが使っているメールアドレスを入力してください。"
+  emailSent: "入力されたメールアドレス({email})宛に確認のメールが送信されました。メールに記載されたリンクにアクセスすると、アカウントの作成が完了します。"
+
 _accountDelete:
   accountDelete: "アカウントの削除"
   mayTakeTime: "アカウントの削除は負荷のかかる処理であるため、作成したコンテンツの数やアップロードしたファイルの数が多いと完了までに時間がかかることがあります。"
