--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -620,8 +620,8 @@ reportAbuse: "通報"
 reportAbuseOf: "{name}を通報する"
 fillAbuseReportDescription: "通報理由の詳細を記入してください。対象のノートがある場合はそのURLも記入してください。"
 abuseReported: "内容が送信されました。ご報告ありがとうございました。"
-targetUserOrigin: "通報されたユーザーの元"
-reporterOrigin: "通報者の元"
+reporteeOrigin: "通報先"
+reporterOrigin: "通報元"
 send: "送信"
 abuseMarkAsResolved: "対応済みにする"
 openInNewTab: "新しいタブで開く"
