--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -806,6 +806,7 @@ muteThread: "スレッドをミュート"
 unmuteThread: "スレッドのミュートを解除"
 ffVisibility: "つながりの公開範囲"
 ffVisibilityDescription: "自分のフォロー/フォロワー情報の公開範囲を設定できます。"
+continueThread: "このスレッドを読み続ける"
 
 _emailUnavailable:
   used: "既に使用されています"
