--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -808,6 +808,7 @@ ffVisibility: "つながりの公開範囲"
 ffVisibilityDescription: "自分のフォロー/フォロワー情報の公開範囲を設定できます。"
 continueThread: "さらにスレッドを見る"
 deleteAccountConfirm: "アカウントが削除されます。よろしいですか？"
+incorrectPassword: "パスワードが間違っています。"
 
 _emailUnavailable:
   used: "既に使用されています"
