--- a/locales/de-DE.yml
+++ b/locales/de-DE.yml
@@ -808,6 +808,8 @@ ffVisibility: "Sichtbarkeit von Gefolgten/Followern"
 ffVisibilityDescription: "Konfiguriere wer sehen kann, wem du folgst sowie wer dir folgt."
 continueThread: "Weiteren Threadverlauf anzeigen"
 deleteAccountConfirm: "Dein Benutzerkonto wird unwiderruflich gelöscht. Trotzdem fortfahren?"
+incorrectPassword: "Falsches Passwort."
+voteConfirm: "Wirklich für \"{choice}\" abstimmen?"
 _emailUnavailable:
   used: "Diese Email-Adresse wird bereits verwendet"
   format: "Das Format dieser Email-Adresse ist ungültig"
@@ -931,6 +933,8 @@ _mfm:
   rainbowDescription: "Lässt den Inhalt in Regenbogenfarben erscheinen."
   sparkle: "Glitzer"
   sparkleDescription: "Verleiht Inhalt einen glitzernden Partikeleffekt."
+  rotate: "Drehen"
+  rotateDescription: "Dreht den Inhalt um einen angegebenen Winkel"
 _reversi:
   reversi: "Reversi"
   gameSettings: "Spieleinstellungen"
