--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -808,6 +808,8 @@ ffVisibility: "Follows/Followers Visibility"
 ffVisibilityDescription: "Allows you to configure who can see who you follow and who follows you."
 continueThread: "View thread continuation"
 deleteAccountConfirm: "This will irreversibly delete your account. Proceed?"
+incorrectPassword: "Incorrect password."
+voteConfirm: "Confirm your vote for \"{choice}\"?"
 _emailUnavailable:
   used: "This email address is already being used"
   format: "The format of this email address is invalid"
@@ -932,7 +934,7 @@ _mfm:
   sparkle: "Sparkle"
   sparkleDescription: "Gives content a sparkling particle effect."
   rotate: "Rotate"
-  rotateDescription: "Rotates the content by 90 degrees"
+  rotateDescription: "Turns content by a specified angle."
 _reversi:
   reversi: "Reversi"
   gameSettings: "Game settings"
