--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -808,6 +808,8 @@ ffVisibility: "连接的可见范围"
 ffVisibilityDescription: "您可以设置您的关注/关注者信息的公开范围"
 continueThread: "查看更多帖子"
 deleteAccountConfirm: "将要删除账户。是否确认？"
+incorrectPassword: "密码错误"
+voteConfirm: "确定投给“{choice}” ？"
 _emailUnavailable:
   used: "已经被使用过"
   format: "无效的格式"
@@ -931,6 +933,8 @@ _mfm:
   rainbowDescription: "用彩虹色来显示内容。"
   sparkle: "闪光"
   sparkleDescription: "添加发光粒子效果。"
+  rotate: "旋转"
+  rotateDescription: "旋转指定的角度。"
 _reversi:
   reversi: "黑白棋"
   gameSettings: "对局设置"
