--- a/locales/eo-UY.yml
+++ b/locales/eo-UY.yml
@@ -20,13 +20,13 @@ instance: "Nodo"
 settings: "Agordoj"
 basicSettings: "Ĝeneralaj agordoj"
 otherSettings: "Aliaj agordoj"
-openInWindow: "Malfermi en fenestro"
+openInWindow: "Malfermi en nova fenestro"
 profile: "Profilo"
 timeline: "Templinio"
-noAccountDescription: "Neniu sinprezento"
-login: "Ensaluti"
-loggingIn: "Ensalutado…"
-logout: "Elsaluti"
+noAccountDescription: "Neniu priskribo"
+login: "Saluti"
+loggingIn: "Salutado…"
+logout: "Adiaŭi"
 signup: "Registriĝi"
 uploading: "Alŝutado…"
 save: "Konservi"
@@ -58,13 +58,13 @@ followRequestAccepted: "La peto de sekvado akceptita"
 mention: "Mencioj"
 mentions: "Mencioj"
 directNotes: "Rekte senditaj"
-importAndExport: "Importi/eksporti"
-import: "Importi"
-export: "Eksporti"
+importAndExport: "Enporti kaj elporti"
+import: "Enporti"
+export: "Elporti"
 files: "Dosieroj"
 download: "Elŝuti"
-driveFileDeleteConfirm: "Ĉu vi certas, ke vi volas forviŝi la dosieron \"{name}\"? Pro tio forviŝiĝos ankaŭ la notoj kiuj enhavas ĝin."
-unfollowConfirm: "Ĉu vi certas, ke vi volas ĉesi sekvi {name}'(o)n?"
+driveFileDeleteConfirm: "Ĉu vi certas, ke vi volas forviŝi la dosieron \"{name}\"? Tio ankaŭ forviŝos la notojn kiuj citas ĝin."
+unfollowConfirm: "Ĉu vi certas, ke vi volas ĉesi sekvi {name}?"
 lists: "Listoj"
 noLists: "Neniu listo"
 note: "Sendi"
@@ -101,7 +101,7 @@ clickToShow: "Klaku por malkaŝu"
 sensitive: "Enhavo ne estas deca por laborejo (NSFW)"
 add: "Aldoni"
 reaction: "Reagoj"
-reactionSettingDescription: "Agordi la reagojn kiujn vi volas prefere montrigi ĉe la elektilo de reagoj"
+reactionSettingDescription: "Agordi la reagojn kiujn vi volas montrigi prefere ĉe la elektilo de reagoj"
 rememberNoteVisibility: "Rememori la agordon de videbleco de la laste sendita"
 attachCancel: "Deigi aldonaĵon"
 markAsSensitive: "Troviĝi NSFW"
@@ -140,15 +140,16 @@ setWallpaper: "Apliki ekranfonon"
 removeWallpaper: "Forviŝi ekranfonon. "
 searchWith: "Serĉi: {q}"
 youHaveNoLists: "Vi ne havas listojn."
-followConfirm: "Ĉu vi certas ke vi volas sekvi {name}'(o)n?"
+followConfirm: "Ĉu vi certas ke vi volas sekvi {name}?"
+proxyAccount: "Retperanta konto"
 host: "Nodo"
 selectUser: "Elekti uzanton"
-recipient: "Ricevonto"
+recipient: "Ricevonton"
 annotation: "Komentarioj"
 federation: "Federaĵo"
 instances: "Nodoj"
 latestRequestSentAt: "Lastatempa sendo"
-latestRequestReceivedAt: "Lastatempa ricevo"
+latestRequestReceivedAt: "La laste ricevita peto "
 latestStatus: "Laŭstato"
 charts: "Diagramoj"
 perHour: "por horo"
@@ -223,7 +224,7 @@ messageRead: "Legita"
 noMoreHistory: "Ne plu de la historio"
 startMessaging: "Komenci babiladon"
 nUsersRead: "Legita de {n} homoj"
-agreeTo: "Mi akceptas {0}'(o)n"
+agreeTo: "Mi akceptas {0}"
 tos: "Kondiĉoj de uzado"
 start: "Komenciĝi"
 home: "Hejma"
@@ -235,12 +236,13 @@ yearsOld: "{age} jaroj aĝa"
 registeredDate: "Dato de registriĝo"
 location: "Kie"
 theme: "Koloraro"
-themeForLightMode: "Luma kolararo en la luma modo"
-themeForDarkMode: "Malluma kolararo en la malluma modo"
+themeForLightMode: "Koloraro uzita en la luma modo"
+themeForDarkMode: "Koloraro uzita en la malluma modo"
 light: "Luma"
 dark: "Malluma"
 lightThemes: "Luma koloraro"
 darkThemes: "Malluma koloraro"
+syncDeviceDarkMode: "Speguli la luman modon de via aparato"
 drive: "Disko"
 fileName: "Dosiernomo"
 selectFile: "Elekti dosieron"
@@ -262,7 +264,7 @@ inputNewFolderName: "Entajpu novan nomon de la dosierujo"
 hasChildFilesOrFolders: "La dosierujo ne estas forviŝebla, ĉar ĝi ne malplenas."
 copyUrl: "Kopii URL"
 rename: "Alinomi"
-avatar: "Ikono"
+avatar: "Bildsimbolo"
 banner: "Standardo"
 nsfw: "Enhavo ne estas deca por laborejo (NSFW)"
 disconnectedFromServer: "Malkonektita de servilo"
@@ -277,7 +279,7 @@ normal: "Normala"
 instanceName: "Nomo de la nodo"
 instanceDescription: "Priskribo de la nodo "
 maintainerName: "Nomo de la administranto"
-maintainerEmail: "Retpoŝto de la administranto"
+maintainerEmail: "Retpoŝtadreso de la administranto"
 tosUrl: "URL de kondiĉoj de uzado"
 thisYear: "Ĉi-jare"
 thisMonth: "Ĉi-monate"
@@ -296,7 +298,7 @@ enableRegistration: "Ebligi novan uzanton registriĝon"
 invite: "Inviti"
 driveCapacityPerLocalAccount: "Volumo de disko po unu loka uzanto"
 driveCapacityPerRemoteAccount: "Volumo de disko po unu fora uzanto"
-iconUrl: "URL de la ikono (retpaĝsimbolo, ktp)"
+iconUrl: "URL de la bildsimbolo (retpaĝsimbolo, ktp.)"
 bannerUrl: "URL de standardo"
 backgroundImageUrl: "URL de fona bildo"
 basicInfo: "Baza informo"
@@ -338,7 +340,7 @@ userList: "Listoj"
 about: "Informoj"
 aboutMisskey: "Pri Misskey"
 administrator: "Administranto"
-token: "Ĵetono"
+token: "Peco"
 twoStepAuthentication: "Dua-faktora aŭtentiko"
 moderator: "Kontrolisto"
 nUsersMentioned: "{n} uzanto(j) menciis"
@@ -347,12 +349,13 @@ securityKeyName: "Nomo de la ŝlosilo"
 registerSecurityKey: "Registri ŝlosilon de sekureco"
 lastUsed: "Plej malnove uzita"
 unregister: "Malregistriĝi"
-passwordLessLogin: "Ensaluti sen pasvorto"
+passwordLessLogin: "Saluti sen pasvorto"
 resetPassword: "Restarigi pasvorton"
 newPasswordIs: "La nova pasvorto estas {password}."
 reduceUiAnimation: "Redukti la animacioj de la fasado"
 share: "Kundividi"
 notFound: "Ne trovita"
+uploadFolder: "Dosierujo implicita por alŝuto"
 cacheClear: "Malplenigi staplon"
 markAsReadAllNotifications: "Marki ĉiujn sciigojn kiel legita"
 help: "Manlibro de uzado"
@@ -362,7 +365,7 @@ group: "Grupo"
 groups: "Grupoj"
 createGroup: "Krei grupon"
 ownedGroups: "Administrataj grupoj"
-joinedGroups: "Al grupoj kiuj vi aliĝis"
+joinedGroups: "Grupoj al kiuj vi aliĝis"
 invites: "Inviti"
 groupName: "Grupa nomo"
 members: "Membroj"
@@ -381,7 +384,7 @@ quoteQuestion: "Ĉu vi aldonas citaĵon?"
 noMessagesYet: "Ankoraŭ neniu mesaĝo"
 newMessageExists: "Vi ricevis novan mesaĝon."
 onlyOneFileCanBeAttached: "Oni povas aldoni nur unu dosieron po mesaĝo."
-signinRequired: "Bonvolu ensaluti"
+signinRequired: "Bonvolu saluti"
 invitations: "Inviti"
 invitationCode: "Invita kodo"
 available: "Disposabla"
@@ -394,10 +397,11 @@ normalPassword: "Normala pasvorto"
 strongPassword: "Forta pasvorto"
 passwordMatched: "Konforma"
 passwordNotMatched: "Nekonforma"
-signinWith: "Ensaluti kun {x}"
+signinWith: "Saluti kun {x}"
 or: "Aŭ"
 language: "Lingvo"
 uiLanguage: "Lingvo de fasado"
+groupInvited: "Vi estas invitita al grupo"
 aboutX: "Pri {x}"
 useOsNativeEmojis: "Uzi la emoĵiojn implicitan de la operaciumo"
 youHaveNoGroups: "Neniuj grupoj"
@@ -408,7 +412,7 @@ category: "Kategorio"
 tags: "Etikedoj"
 docSource: "Fonto de la dokumento"
 createAccount: "Krei konton"
-existingAccount: "Ekzista konto"
+existingAccount: "Ekzistan konton"
 regenerate: "Regeneri"
 fontSize: "Tipara grando"
 noFollowRequests: "Vi ne havas peto de sekvado"
@@ -426,6 +430,7 @@ objectStorageBaseUrl: "Baza URL"
 objectStoragePrefix: "Prefix"
 objectStorageRegion: "Regiono"
 objectStorageUseSSL: "Oni uzas SSL"
+objectStorageUseProxy: "Uzi retperilon"
 serverLogs: "Servila protokolo"
 deleteAll: "Forviŝi ĉiujn"
 newNoteRecived: "Jen estas novaj notoj"
@@ -467,8 +472,8 @@ enableInfiniteScroll: "Ebligi infinitan rulumon"
 visibility: "Videbleco"
 poll: "Balotujo"
 useCw: "Kaŝi enhavo"
-enablePlayer: "Vidi videon"
-disablePlayer: "Fermi videon"
+enablePlayer: "Vidigi la filmeton"
+disablePlayer: "Malfermi la filmeton"
 expandTweet: "Disvolvi pepon"
 themeEditor: "Redaktilo de koloraroj"
 description: "Priskribo"
@@ -484,15 +489,16 @@ height: "Alteco"
 large: "Granda"
 medium: "Meza"
 small: "Malgranda"
-generateAccessToken: "Generi ĵetonon de aliro"
+generateAccessToken: "Generi aŭtentikigan pecon"
 permission: "Permesoj"
 enableAll: "Ebligi ĉiujn"
 disableAll: "Malebligi ĉiujn"
 notificationType: "Tipo de sciigoj"
 edit: "Redakti"
 emailServer: "Retpoŝta servilo"
+enableEmail: "Ebligi dissendon el retpoŝto"
 email: "Retpoŝto"
-emailAddress: "Retpoŝta adreso"
+emailAddress: "Retpoŝtadreso"
 smtpConfig: "Agordoj de SMTP servilo"
 smtpHost: "Transa servilo"
 smtpPort: "Pordo"
@@ -513,14 +519,14 @@ create: "Krei"
 notificationSetting: "Agordoj de sciigoj"
 useGlobalSetting: "Oni uzas malloka agordo"
 other: "Aliaj"
-regenerateLoginToken: "Regeneri la ĵetonon de aliro"
+regenerateLoginToken: "Regeneri la aŭtentikigan pecon"
 fileIdOrUrl: "Dosiera identigilo aŭ URL"
 chatOpenBehavior: "Konduto por malfermi la fenestron de babilejo"
 behavior: "Konduto"
 sample: "Ekzemplo"
 abuseReports: "Signaloj"
 reportAbuse: "Signalo"
-reportAbuseOf: "Signali kontraŭ {name}'(o)"
+reportAbuseOf: "Signali kontraŭ {name}"
 send: "Sendi"
 openInNewTab: "Malfermi en nova langeto"
 editTheseSettingsMayBreakAccount: "Redakti ĉi tiujn agordojn povas damaĝi vian konton."
@@ -528,6 +534,7 @@ instanceTicker: "Nomo de la nodo sendinta notojn"
 waitingFor: "Atendado pro {x}"
 random: "Hazarde"
 system: "Sistemo"
+switchUi: "Modifi la aspektigon"
 desktop: "Labortablo"
 createNew: "Krei novan"
 optional: "Opciaj"
@@ -583,6 +590,7 @@ youAreRunningUpToDateClient: "Vi uzas la plej novan version de via kliento."
 newVersionOfClientAvailable: "Nova versio de via kliento estas disponebla."
 inUse: "Uzata"
 editCode: "Redakti kodon"
+receiveAnnouncementFromInstance: "Ricevi informojn sciigintajn de la nodo"
 emailNotification: "Sciigoj per retpoŝto"
 inChannelSearch: "Serĉi en kanalo"
 useReactionPickerForContextMenu: "Dekstre-klaki por malfermi la elektilon de reagoj"
@@ -617,6 +625,7 @@ troubleshooting: "Problemsolvi"
 learnMore: "Lernu pli"
 translate: "Traduki"
 translatedFrom: "Tradukita el {x}"
+breakFollow: "Ĉesigi la sekvadon al vi"
 itsOn: "Ŝaltita"
 unread: "Nelegita"
 controlPanel: "Ŝaltpodio"
@@ -735,7 +744,7 @@ _sfx:
   notification: "Sciigoj"
   chat: "Retbabili"
   chatBg: "Retbabili (BG)"
-  antenna: "Ricevo de anteno"
+  antenna: "Ricevo de la anteno"
   channel: "Sciigoj de kanalo"
 _ago:
   future: "Futuro"
@@ -780,6 +789,7 @@ _permissions:
   "read:reactions": "Vidi reagojn"
   "write:reactions": "Redakti viajn reagojn"
   "read:page-likes": "Vidi ŝatojn de paĝo"
+  "read:user-groups": "Vidi viajn grupojn de uzantoj"
   "read:channels": "Vidi kanalojn"
 _antennaSources:
   all: "Ĉiuj notoj"
@@ -838,12 +848,12 @@ _profile:
   changeBanner: "Ŝanĝi standardon"
 _exportOrImport:
   allNotes: "Ĉiuj notoj"
-  followingList: "Sekvataj uzantoj"
+  followingList: "Sekvatoj"
   muteList: "Silentigoj"
   blockingList: "Blokitoj"
   userLists: "Listoj"
 _charts:
-  federationInstancesTotal: "La totala nombro de nodoj kunfederantaj"
+  federationInstancesTotal: "La totala nombro de nodoj federantaj"
   usersTotal: "La totala nombro de la uzantoj"
   activeUsers: "La nombro de la uzantoj aktivaj"
   notesTotal: "La totala nombro de notoj"
@@ -914,6 +924,7 @@ _pages:
       default: "Implicitaĵa valoro"
     _canvas:
       id: "Kanvasa identigilo"
+      width: "Larĝeco"
     _note:
       id: "Identigilo de noto"
     _switch:
@@ -991,6 +1002,7 @@ _notification:
   youWereFollowed: "eksekvis vin"
   youReceivedFollowRequest: "Vi ricevis peton de sekvado"
   yourFollowRequestAccepted: "Via peto de sekvado estis akceptita."
+  youWereInvitedToGroup: "Vi estas invitita al grupo"
   _types:
     all: "Ĉio"
     follow: "Novaj sekvatoj"
@@ -1001,6 +1013,7 @@ _notification:
     reaction: "Reagoj"
     receiveFollowRequest: "Ricevi peton de sekvado"
     followRequestAccepted: "Akceptita peto por sekvado"
+    groupInvited: "Invito al grupo"
 _deck:
   profile: "Agordaro"
   _columns:
