New Crowdin updates (#8053)
* New translations ja-JP.yml (Korean)

* New translations ja-JP.yml (Korean)

* New translations ja-JP.yml (Korean)

* New translations ja-JP.yml (Korean)

* New translations ja-JP.yml (Korean)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

* New translations ja-JP.yml (Esperanto)

--- a/locales/eo-UY.yml
+++ b/locales/eo-UY.yml
@@ -1,8 +1,8 @@
 ---
 _lang_: "Esperanto"
-headlineMisskey: "Jen la reto konektata de notoj"
-introMisskey: "Bonvenon! Misskey estas malfermitkoda malcentraliza etbloga servo.\nKreu \"noto\"n por paroli vian penson al iuj ĉirkaŭ vi. 📡\nLa funkcion \"reago\" ebligas esprimi rapide vian senton pri ies noto en Fediverso. 👍\nBonvole esploru novan mondon. 🚀"
-monthAndDay: "la {day}a de la {month}a"
+headlineMisskey: "Reto konektita per notoj"
+introMisskey: "Bonvenon! Misskey estas malfermitkoda malcentraliza etbloga servo.\nKreu \"noto\"n por diskonigi nunan aferon, aŭ por paroli vian penson al ĉiuj ĉirkaŭ vi. 📡\nLa funkcion \"reago\" ebligas esprimi rapide vian senton pri la noto de la alia en la Fediverso. 👍\nBonvole esploru novan mondon. 🚀"
+monthAndDay: "la {day}a de la {month}a monato"
 search: "Serĉi"
 notifications: "Sciigoj"
 username: "Uzantnomo"
@@ -129,8 +129,9 @@ emojiUrl: "URL de la emoĵio"
 addEmoji: "Aldoni emoĵion"
 settingGuide: "Agordaj rekomendoj"
 cacheRemoteFiles: "Stapli forajn dosierojn"
-flagAsBot: "Fari la flagon por robota uzanto"
-flagAsCat: "Fari la flagon por kat-iĝi"
+flagAsBot: "Agordi por robota uzanto"
+flagAsCat: "Agordi por kata uzanto"
+flagAsCatDescription: "Se vi estas kato, ebligu la agordon."
 autoAcceptFollowed: "Aŭtomate akcepti la peton de sekvado far uzantoj kiujn vi sekvas"
 addAccount: "Aldoni konton"
 showOnRemote: "Vidi ĉe la surloka nodo"
@@ -148,7 +149,7 @@ recipient: "Ricevonton"
 annotation: "Komentarioj"
 federation: "Federaĵo"
 instances: "Nodoj"
-latestRequestSentAt: "Lastatempa sendo"
+latestRequestSentAt: "La laste sendita peto"
 latestRequestReceivedAt: "La laste ricevita peto "
 latestStatus: "Laŭstato"
 charts: "Diagramoj"
@@ -158,7 +159,7 @@ blockThisInstance: "Bloki la nodon"
 operations: "Agoj"
 software: "Programaro"
 version: "Versio"
-metadata: "Metadatumoj"
+metadata: "Pridatumoj"
 withNFiles: "{n} dosiero(j)"
 monitor: "Monitoro"
 network: "Reto"
@@ -228,7 +229,7 @@ agreeTo: "Mi akceptas {0}"
 tos: "Kondiĉoj de uzado"
 start: "Komenciĝi"
 home: "Hejma"
-remoteUserCaution: "Ĉi tiuj infomoj de la uzanto el fora nodo, ne estas tute ekzaktaj."
+remoteUserCaution: "Ĉi tiuj infomoj ne estas kompletaj, ĉar ili estas pri uzanto el la fora."
 activity: "Aktiveco"
 images: "Bildoj"
 birthday: "Naskiĝdato"
@@ -300,7 +301,7 @@ driveCapacityPerLocalAccount: "Volumo de disko po unu loka uzanto"
 driveCapacityPerRemoteAccount: "Volumo de disko po unu fora uzanto"
 iconUrl: "URL de la bildsimbolo (retpaĝsimbolo, ktp.)"
 bannerUrl: "URL de standardo"
-backgroundImageUrl: "URL de fona bildo"
+backgroundImageUrl: "URL de la fona bildo"
 basicInfo: "Baza informo"
 pinnedUsers: "Alpinglita uzanto"
 pinnedUsersDescription: "Listigu uzantnomojn apartige en ĉiu linio por alpingli al la paĝoj ekz \"Esplori\"."
@@ -352,7 +353,7 @@ unregister: "Malregistriĝi"
 passwordLessLogin: "Saluti sen pasvorto"
 resetPassword: "Restarigi pasvorton"
 newPasswordIs: "La nova pasvorto estas {password}."
-reduceUiAnimation: "Redukti la animacioj de la fasado"
+reduceUiAnimation: "Redukti la animaciojn de la fasado"
 share: "Kundividi"
 notFound: "Ne trovita"
 uploadFolder: "Dosierujo implicita por alŝuto"
@@ -386,7 +387,7 @@ newMessageExists: "Vi ricevis novan mesaĝon."
 onlyOneFileCanBeAttached: "Oni povas aldoni nur unu dosieron po mesaĝo."
 signinRequired: "Bonvolu saluti"
 invitations: "Inviti"
-invitationCode: "Invita kodo"
+invitationCode: "Kodo de invito"
 available: "Disposabla"
 unavailable: "Ne disponebla"
 usernameInvalidFormat: "La uzantnomo povas enhavi minusklajn kaj majusklajn literojn, numerojn, nur kaj '_'."
@@ -401,7 +402,7 @@ signinWith: "Saluti kun {x}"
 or: "Aŭ"
 language: "Lingvo"
 uiLanguage: "Lingvo de fasado"
-groupInvited: "Vi estas invitita al grupo"
+groupInvited: "Invitita al grupo"
 aboutX: "Pri {x}"
 useOsNativeEmojis: "Uzi la emoĵiojn implicitan de la operaciumo"
 youHaveNoGroups: "Neniuj grupoj"
@@ -433,7 +434,7 @@ objectStorageUseSSL: "Oni uzas SSL"
 objectStorageUseProxy: "Uzi retperilon"
 serverLogs: "Servila protokolo"
 deleteAll: "Forviŝi ĉiujn"
-newNoteRecived: "Jen estas novaj notoj"
+newNoteRecived: "Jen novaj notoj"
 sounds: "Sonoj"
 listen: "Aŭdi"
 none: "Neniu"
@@ -570,7 +571,7 @@ wide: "Vasta"
 narrow: "Malvasta"
 showTitlebar: "Videbligi titolan stangon"
 clearCache: "Malplenigi staplon"
-onlineUsersCount: "{n} uzanto(j) estas surlinea"
+onlineUsersCount: "{n} uzantoj estas surlineaj"
 nUsers: "{n} uzanto(j)"
 nNotes: "{n} notoj"
 myTheme: "Miaj koloraroj"
@@ -656,7 +657,7 @@ _gallery:
   like: "Ŝati"
 _email:
   _follow:
-    title: "Vi estas eksekvita"
+    title: "Eksekvis vin"
   _receiveFollowRequest:
     title: "Vi ricevis peton de sekvado"
 _plugin:
@@ -749,7 +750,7 @@ _sfx:
 _ago:
   future: "Futuro"
   justNow: "Ĵus"
-  secondsAgo: "Antaŭ {n} sekundo(j)"
+  secondsAgo: "Antaŭ {n} sekundoj"
   minutesAgo: "Antaŭ {n} minutoj"
   hoursAgo: "Antaŭ {n} horo(j)"
   daysAgo: "Antaŭ {n} tago(j)"
@@ -837,13 +838,13 @@ _visibility:
 _postForm:
   replyPlaceholder: "Respondi la noton…"
   quotePlaceholder: "Citi la noton…"
-  channelPlaceholder: "Mencii en kanalo…"
+  channelPlaceholder: "Mencii en la kanalo…"
 _profile:
   name: "Nomo"
   username: "Uzantnomo"
   description: "Sinprezento"
   metadata: "Kromaj informoj"
-  metadataEdit: "Redakti kromaj informoj"
+  metadataEdit: "Redakti kromajn informojn"
   changeAvatar: "Ŝanĝi profilbildon"
   changeBanner: "Ŝanĝi standardon"
 _exportOrImport:
@@ -935,8 +936,11 @@ _pages:
     _button:
       text: "Titolo"
       _action:
+        _dialog:
+          content: "Enhavo"
         _pushEvent:
           event: "Nomo de la evento"
+          no-variable: "Neniu"
     _radioButton:
       title: "Titolo"
       default: "Implicitaĵa valoro"
@@ -1002,7 +1006,7 @@ _notification:
   youWereFollowed: "eksekvis vin"
   youReceivedFollowRequest: "Vi ricevis peton de sekvado"
   yourFollowRequestAccepted: "Via peto de sekvado estis akceptita."
-  youWereInvitedToGroup: "Vi estas invitita al grupo"
+  youWereInvitedToGroup: "Invitita al grupo"
   _types:
     all: "Ĉio"
     follow: "Novaj sekvatoj"
@@ -1013,7 +1017,7 @@ _notification:
     reaction: "Reagoj"
     receiveFollowRequest: "Ricevi peton de sekvado"
     followRequestAccepted: "Akceptita peto por sekvado"
-    groupInvited: "Invito al grupo"
+    groupInvited: "Invitita al grupo"
 _deck:
   profile: "Agordaro"
   _columns:
