--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -106,7 +106,7 @@ clickToShow: "クリックして表示"
 sensitive: "閲覧注意"
 add: "追加"
 reaction: "リアクション"
-reactionSettingDescription: "リアクションピッカーに表示するリアクションを設定します。"
+reactionSetting: "ピッカーに表示するリアクション"
 reactionSettingDescription2: "ドラッグして並び替え、クリックして削除、＋を押して追加します。"
 rememberNoteVisibility: "公開範囲を記憶する"
 attachCancel: "添付取り消し"
