--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -448,6 +448,7 @@ uiLanguage: "UIの表示言語"
 groupInvited: "グループに招待されました"
 aboutX: "{x}について"
 useOsNativeEmojis: "OSネイティブの絵文字を使用"
+disableDrawer: "メニューをドロワーで表示しない"
 youHaveNoGroups: "グループがありません"
 joinOrCreateGroup: "既存のグループに招待してもらうか、新しくグループを作成してください。"
 noHistory: "履歴はありません"
