enhance(client): tweak ui

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -743,7 +743,7 @@ online: "オンライン"
 active: "アクティブ"
 offline: "オフライン"
 notRecommended: "非推奨"
-botProtection: "Bot防御"
+botProtection: "Botプロテクション"
 instanceBlocking: "インスタンスブロック"
 selectAccount: "アカウントを選択"
 enabled: "有効"
@@ -754,7 +754,7 @@ administration: "管理"
 accounts: "アカウント"
 switch: "切り替え"
 noMaintainerInformationWarning: "管理者情報が設定されていません。"
-noBotProtectionWarning: "Bot防御が設定されていません。"
+noBotProtectionWarning: "Botプロテクションが設定されていません。"
 configure: "設定する"
 postToGallery: "ギャラリーへ投稿"
 gallery: "ギャラリー"
